# TuxSplit

./: Cargo.toml  README.md  com.tunixr.tuxsplit.json  config.yaml  install.sh  io.github.tunixr.tuxsplit.json  meson.build
data/: tuxsplit.xml
data/config/: config.yaml
data/css/: livesplit-gtk.css  tuxsplit.css
src/: config.rs  context.rs  main.rs
src/formatters/: time.rs
src/ui/: header.rs  mod.rs  ui.rs
src/ui/editor/: action_bar.rs  context.rs  mod.rs  table.rs
src/ui/info/: mod.rs
src/ui/menu/: mod.rs
src/ui/timer/: body.rs  data_model.rs  footer.rs  header.rs  mod.rs  timer.rs  widgets.rs
src/utils/: comparisons.rs
