[package]
name = "unixsplit"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = "0.21.3"
gtk4 = "0.10.1"
livesplit-core = "0.13.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
