[package]
name = "tuxsplit"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_1", "v1_5", "v1_6"] }
glib = "0.21.3"
gtk4 = "0.10.1"
livesplit-core = { version = "0.13.0", features = ["auto-splitting"] }
serde = "1.0.228"
serde_yaml = "0.9.34"
time = "0.3.44"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
